update message container to correctly wrap long words using scss

--- a/styles/messages.scss
+++ b/styles/messages.scss
@@ -224,6 +224,7 @@ h1{
   align-items: center;      /* Aligns child elements vertically (up and down) */
   opacity: 0.5;  
   // border: 3px dashed orangered;
+  word-wrap: break-word;
 }
 
 .drawing-space{
